# curve

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: format.yaml  test.yaml
contracts/blockhash/: IBlockHashOracle.vyi  IBlockHashRetain.vyi
contracts/scrvusd/oracles/: README.md  ScrvusdOracleV2.vy
contracts/scrvusd/verifiers/: ScrvusdVerifierV1.sol  ScrvusdVerifierV2.sol
scripts/scrvusd/: deploy.py  proof.py  scrvusd_keeper.py
tests/: conftest.py
tests/scrvusd/: conftest.py
tests/scrvusd/contracts/: ScrvusdOracleMock.vy
tests/scrvusd/integration/: conftest.py  test_verify.py
tests/scrvusd/oracle/: conftest.py
tests/scrvusd/oracle/stateful/: crvusd_state_machine.py  test_prices.py  test_smoothening.py
tests/scrvusd/oracle/unitary/: test_v2.py
tests/scrvusd/verifier/: conftest.py
tests/scrvusd/verifier/unitary/: test_price.py  test_profit_max_unlock_time.py
tests/shared/: verifier.py
tests/shared/contracts/: BlockHashOracleMock.vy  ERC20Mock.vy
