[project]
name        = "storage-proofs"
version     = "0.1.0"
description = "L2 Oracles powered by storage proofs"
authors     = [{ name = "Curve.fi", email = "info@curve.fi" }]

readme          = "README.md"
requires-python = ">=3.10"

dependencies = [
    "vyper>=0.4.0",
    "snekmate==0.1.0",
    "web3>=7.0.0",
    "ruff>=0.9.6",
    "mamushi==0.0.4a3",
    # placeholders for git dependencies
    "titanoboa",
]

[dependency-groups]
dev = [
    "solc-select>=1.0.4",
    "py-evm==0.10.1b2",  # Update after `pytest .` check
    "pytest-xdist>=3.6.1",
    # placeholders for git dependencies
    "boa-solidity",
]

[tool.uv.sources]
titanoboa    = { git = "https://github.com/vyperlang/titanoboa.git", rev = "19d2a5d7745ac8ed29639257e8d49bfb1bdb366a" }  # Update after `pytest .` check
boa-solidity = { git = "https://github.com/z80dev/boa-solidity", rev = "3e00649f643ce69108f266942c90bffc717b18b7" }  # Update after `pytest .` check

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "forked: Tests run in forked environment.",
    "slow: Mark tests that take longer to execute, mainly stateful tests interacting with different contract states.",
]
pythonpath = ["."]
